--- a/Practica 1/inicio2.html
+++ b/Practica 1/inicio2.html
@@ -30,7 +30,7 @@
    <li>5</li>
 
     </ul>
-     <p> <button ><a href="practica tablas.html"></a> Menu</button></p>
+     <p> <button ><a href="practica tablas.html"></a>Tablas y mapas</button></p>
 </body>
 
 </html>
