--- a/Practica 1/inicio2.html
+++ b/Practica 1/inicio2.html
@@ -30,7 +30,9 @@
    <li>5</li>
 
     </ul>
-     <p> <button ><a href="practica tablas.html"></a>Tablas y mapas</button></p>
+     <a href="practica tablas.html">
+        <button>Tablas y mapas</button>
+    </a>
 </body>
 
 </html>
