--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body {
   <a href="Practica 1/inicio2.html">Practicas del tema 1</a>
   <a href="Practica 2/muevete.html">Practicas del Tema 2</a>
   <a href="Practica 3/index.html">Practicas Tema 3</a>
-  <a href="acercaDe/Portada.pdf">Acerca de nostros</a>
+  <a href="PortadaMateria.pdf">Acerca de nostros</a>
 </div>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdrcSn-LEd9WAp1j_xuq19RSFp8IXcAzI6MpMh8zuEMBPLhgw/viewform?embedded=true" width="640" height="1780" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
 
