--- a/Practica 1/practica tablas.html
+++ b/Practica 1/practica tablas.html
@@ -68,7 +68,7 @@
         chart.draw(data, options);
       }
       </script>
-    <title>Document</title>
+    <title>Tablas, mapas y videos</title>
 </head>
 <body>
 
