--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body {
     
     </ul>
      <a href="https://forms.gle/5wuTmuv7LES73BNh8">
-        <button>Tablas y mapas</button>
+        <button>Ir a formulario</button>
     </p>
 </body>
 </html>
