--- a/Practica 2/muevete.html
+++ b/Practica 2/muevete.html
@@ -56,5 +56,8 @@
     document.addEventListener("click", moveOnClick);
 
     </script>
+      </ul>
+     <a href="js.html">
+        <button>Practicas del lado del cliente</button>
 </body>
 </html>
