--- a/Practica 2/js.html
+++ b/Practica 2/js.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chico php</title>
     <script>
          function mostrarSaludoYHora() {
             var newdate = new Date();
